# Packet-analyzer

./: .gitignore  CMakeLists.txt  PacketAnalyzer.vcxproj  PacketAnalyzer2026_GUI.sln  README.md  complete_interface.qml  main.cpp  resources.qrc
database/: init_database.cpp
src/audit/: AuditLogger.hpp
src/database/: DatabaseManager.cpp  DatabaseManager.h  SimpleDatabaseManager.cpp  SimpleDatabaseManager.h
src/models/: PacketAnalyzerModel.cpp  PacketAnalyzerModel.h
src/performance/: ThreadPool.hpp
src/protocols/: ModernProtocolParser.hpp
src/resilience/: CircuitBreaker.hpp  DeadLetterQueue.hpp
src/security/: PrivilegeManager.hpp
ui/components/: AsciiView.qml  BandwidthChart.qml  GlassCard.qml  HealthIndicator.qml  HexDumpView.qml  MenuBarButton.qml  ModernButton.qml  NetworkTopologyMap.qml  PacketDelegate.qml  PacketTableView.qml  ProtocolTreeView.qml  StatItem.qml  StatsCard.qml
ui/dialogs/: CaptureDialog.qml
